@@ -1,5 +1,9 @@
 2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* libmisc/audit_help.c: Add brackets.
+
+2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* libmisc/addgrps.c: Avoid implicit conversion of pointers to
 	booleans.
 	* libmisc/addgrps.c: Add brackets.
